-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
None
-
Qt 5.3.1
Debian Linux 7 x32
-
0af228700e85167b9406193a38ea27584c6dc4d7
The signal `onClosing` fires only when `Window` closed with x button.
Using `Window.close()` has no effect.
How to reproduce:
Window { id: someWindow onClosing: { console.log("OnClosing fired"); } Button { text: "Close" onClicked: { someWindow.close(); } } }
- is duplicated by
-
QTBUG-42426 Window.close() should not be callable in QML
-
- Closed
-
- relates to
-
QTBUG-31019 need a way to intercept closing of a Window in Qt Quick
-
- Closed
-
-
QTBUG-40857 ColorDialog: rejected signal doesn't get emitted when closing the window.
-
- Open
-
-
QTBUG-33235 OSX: QQuickWindow doesn't get a closeEvent on Cmd+Q
-
- Closed
-