Make QWindow::close go through the QWindowSystemInterface

This causes a closeEvent to be sent for all calls to close.

As a side effect destroy now handles more of the state in
QGuiApplication.

[ChangeLog][QtGui][QWindow] QWindow::close() sends a QCloseEvent
which must be accepted before destroy() will be called. destroy()
is the function to close the window without confirmation.

Task-number: QTBUG-40093
Change-Id: I1ce09da4940fc29fae8decf40548a42e3bec6eca
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>